# plan_slice

./: .env  README.md  SAAS_INTEGRATION_PLAN.md  index.html  package-lock.json  package.json  tauri_help.txt
scripts/: open-6-apps.ps1
src/: App.css  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: .env.example  .gitignore  2  Cargo.toml  config.json  tauri.conf.json
src-tauri/.plan_slice/: store.json
src-tauri/capabilities/: default.json
src-tauri/database/: schema.sql
src-tauri/src/: error.rs  lib.rs  models.rs
src-tauri/src/commands/: auth_commands.rs  config_commands.rs  file_commands.rs  health_commands.rs  mod.rs  monitor_commands.rs  operation_commands.rs  system.rs
src-tauri/src/db/: connection.rs  models.rs  repositories.rs
src-tauri/src/services/: config_service.rs  file_service.rs  health_service.rs  local_store_service.rs  mod.rs  monitor_service.rs  operation_service.rs
src/components/common/: ErrorBoundary.tsx
src/components/main/: ControlPanel.tsx  FinishOperationModal.tsx  HistoryPanel.tsx  Icons.tsx  MonitorAccessModal.tsx
src/components/monitor/: ActiveOperationsTable.tsx  MonitorHeader.tsx  MonitorHistoryTable.tsx
src/hooks/: useActiveOperation.ts  useMonitorSnapshot.ts
src/lib/: errors.ts  monitor.ts  tauri.ts
src/pages/: MonitorPage.tsx
